# fpseries

./: Makefile  README.md  _CoqProject  rocq-mathcomp-fpseries.opam
.github/workflows/: nix-action-rocq-9.0-mc2.4.0.yml  nix-action-rocq-9.0-mc2.5.0.yml  nix-action-rocq-9.1-mc2.5.0.yml  nix-action-rocq-9.1-mcmaster.yml  nix-action-rocq-9.2-mc2.5.0.yml
.nix/: config.nix
.nix/coq-overlays/fpseries/: default.nix
theories/fps/: Laurent_series.v  auxresults.v  catalan.v  catalan_fps.v  directed.v  dirlim.v  dirlim_constr.v  fps.v  hugeop.v  infpoly.v  invlim.v  natbar.v  padic.v  tfps.v
